# StatisticalShapeModeling

./: .gitignore  AlignmentOfSurfaces.cxx  BaseShapeConstructor.cxx  BinaryMask3DProcessing.cxx  BinaryMask3DSurfaceConstructor.cxx  CMakeLists.txt  ComputeMeanSurface.cxx  CrossValidationTest.cxx  DecimateSurface.cxx  ImageToSurface.cxx  LICENSE  LabelToSurface.cxx  LabelToSurfaceConstructor.cxx  MaskToSurfaceConstructor.cxx  PointSetToImageMetrics.h  PointSetToImageMetrics.hxx  PointSetToImageRegistration.cxx  PointSetToImageRegistration.h  PointSetToImageRegistration.hxx  README.md  ReduceSurface.cxx  ReferenceShapeConstructor.cxx  ShapeModelToImageRegistration.cxx  ShapeModelToImageRegistration.h  ShapeModelToImageRegistration.hxx  ShapeModelToSurfaceRegistration.cxx  ShapeModelToSurfaceRegistrationFilter.h  ShapeModelToSurfaceRegistrationFilter.hxx  SurfaceToImageRegistration.cxx  SurfaceToImageRegistrationFilter.h  SurfaceToImageRegistrationFilter.hxx  SurfaceToLevelSetImageFilter.h  SurfaceToLevelSetImageFilter.hxx  itkShapeModelRegistrationMethod.h  itkShapeModelRegistrationMethod.hxx  itkShapeModelToImageMetric.h  itkShapeModelToImageMetric.hxx  itkSurfaceToImageRegistrationFilter.h  itkSurfaceToImageRegistrationFilter.hxx  itkSurfaceToImageRegistrationMethod.h  (+19 more)
Applications/: CMakeLists.txt  ssm-align-surfaces.cxx  ssm-build-pipeline.cxx  ssm-build-reference.cxx  ssm-build-shapemodel.cxx  ssm-compute-average-surface.cxx  ssm-cross-validation.cxx  ssm-establish-correspondence.cxx  ssm-extract-surface.cxx  ssm-fit-shapemodel-to-image.cxx  ssm-fit-shapemodel-to-surface.cxx  ssm-specificity.cxx
Modules/Configs/: config.ini
Modules/Options/: CMakeLists.txt  ssmAlignmentOptions.h  ssmCorrespondenceOptions.h  ssmExtractionOptions.h  ssmModelBuildingOptions.h  ssmModelCrossValidationOptions.h  ssmModelQualityOptions.h  ssmModelSpecificityOptions.h  ssmOptionsBase.h  ssmReferenceOptions.h
Modules/SSM/: CMakeLists.txt  ssmBinaryImageToLevelSetImageFilter.h  ssmBinaryMask3DMeshSource.h  ssmBinaryMask3DMeshSource.hxx  ssmImage3DMeshSource.h  ssmImage3DMeshSource.hxx  ssmInitializeSpatialTransform.h  ssmMeshToImageRegistrationMethod.h  ssmMeshToImageRegistrationMethod.hxx  ssmMeshToLevelSetImageFilter.h  ssmMeshToLevelSetImageFilter.hxx  ssmPointSetToImageMetrics.h  ssmShapeModelMultiTransform.h  ssmShapeModelMultiTransform.hxx  ssmShapeModelRegistrationMethodBase.h  ssmShapeModelRegistrationMethodBase.hxx  ssmShapeModelToImageMetric.h  ssmShapeModelToImageMetric.hxx  ssmShapeModelToImageRegistrationMethod.h  ssmShapeModelToImageRegistrationMethod.hxx  ssmShapeModelToLevelSetImageMetric.h  ssmShapeModelToLevelSetImageMetric.hxx  ssmStatisticalShapeModelMultiTransform.h  ssmStatisticalShapeModelMultiTransform.hxx  ssmSurfaceToImageRegistrationMethod.h  ssmSurfaceToImageRegistrationMethod.hxx  ssmSurfaceToLevelSetImageFilter.h  ssmSurfaceToLevelSetImageFilter.hxx  ssmTypes.h
Modules/Utils/: CMakeLists.txt  ssmAlignmentOptions.h  ssmBaseOptions.h  ssmCorrespondenceOptions.h  ssmExtractionOptions.h  ssmOptions.h  ssmOptionsBase.h  ssmReferenceOptions.h  ssmSurfaceExtractionOptions.h  ssmUtils.h
ssm/: ssmBinaryImageToLevelSetImageFilter.h  ssmInitializeTransform.h  ssmMeshMomentsCalculator.h  ssmMeshMomentsCalculator.hxx  ssmMeshPropertiesCalculator.h  ssmMeshPropertiesCalculator.hxx  ssmPointSetToImageMetrics.h  ssmPointSetToImageMetrics.hxx  ssmPointSetToPointSetMetrics.h  ssmShapeModelRegistrationMethod.h  ssmShapeModelRegistrationMethod.hxx  ssmShapeModelToImageMetric.h  ssmShapeModelToImageMetric.hxx  ssmShapeModelToImageRegistrationMethod.h  ssmShapeModelToImageRegistrationMethod.hxx  ssmSurfaceToImageRegistrationMethod.h  ssmSurfaceToImageRegistrationMethod.hxx  ssmSurfaceToLevelSetImageFilter.hxx  ssmTransformInitializer.h
utils/: CommandLineArgumentParser.cxx  CommandLineArgumentParser.h  PointSetToImageMetrics.h  PointSetToImageMetrics.hxx  agtkCommandLineArgumentParser.h  agtkCommandLineArgumentParser.hxx  io.h  itkCommandLineArgumentParser.h  ssmTypes.h
